Добавление адаптации путей

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -79,7 +79,7 @@
                     <input type="text" name="one" placeholder="1." oninput="fixFirstLetter(this)" required>
                     <input type="text" name="two" placeholder="2." oninput="fixFirstLetter(this)" required>
                     <input type="text" name="three" placeholder="3." oninput="fixFirstLetter(this)" required>
-                    <input type="text" name="four" placeholder="4." oninput="fixFirstLetter(this)">  
+                    <input type="text" name="four" placeholder="4." oninput="fixFirstLetter(this)" required>  
                     <label> Научный руководитель </label>
                         <select name="Teacher" id="Teacher" >
                             <option value="Алексеев Михаил Николаевич">
