--- a/index.html
+++ b/index.html
@@ -35,39 +35,7 @@
                         text-align: center;
                         margin-bottom: 10px;
                     }
-                    .button-link {
-                        display: inline-block;
-                        text-align: center;
-                        width: 106%;
-                        padding: 10px;
-                        background-color: #007BFF; 
-                        color: white; 
-                        text-decoration: none; 
-                        border: none; 
-                        border-radius: 4px; 
-                        font-size: 17px; 
-                        cursor: pointer; 
-                        margin-bottom: 15px;
-                        margin-top: 15px;
-                    }
-                    .button-link:hover {
-                        background-color: #0056b3;
-                    }
                 </style>
-                <script>
-                    function fixFirstLetter(input) {
-                        input.value = input.value.charAt(0).toLowerCase() + input.value.slice(1);
-                    }
-            
-                    function validateFormAndProceed() {
-                        const form = document.querySelector('form');
-                        if (form.checkValidity()) {
-                            window.location.href = 'index2.html';
-                        } else {
-                            form.reportValidity();
-                        }
-                    }
-                </script>
             </head>
             <body>
                 <form action="/Further" method="post">
@@ -77,6 +45,7 @@
                     <select id="group" name="group">
                         <option name="МТ-101" value="МТ-101">Группа МТ-101</option>
                         <option name="МТ-102" value="МТ-102">Группа МТ-102</option>
+                        <option name="МТ-103" value="МТ-103">Группа МТ-102</option>
                         <option name="МТ-201" value="МТ-201">Группа МТ-201</option>
                         <option name="МТ-202" value="МТ-202">Группа МТ-202</option>
                         <option name="МТ-301" value="МТ-301">Группа МТ-301</option>
@@ -87,6 +56,7 @@
                         <option name="МП-102" value="МП-102">Группа МП-102</option>
                         <option name="МН-101" value="МН-101">Группа МН-101</option>
                         <option name="МН-102" value="МН-102">Группа МН-102</option>
+                        <option name="МП-103" value="МТ-103">Группа МТ-102</option>
                         <option name="МагМТ-101" value="МагМТ-101">Группа МагМТ-101</option>
                         <option name="МагМТ-201" value="МагМТ-201">Группа МагМТ-201</option>
                     </select><br><br>
@@ -111,7 +81,7 @@
                     <input type="text" name="one" placeholder="1." oninput="fixFirstLetter(this)" required>
                     <input type="text" name="two" placeholder="2." oninput="fixFirstLetter(this)" required>
                     <input type="text" name="three" placeholder="3." oninput="fixFirstLetter(this)" required>
-                    <input type="text" name="four" placeholder="4." oninput="fixFirstLetter(this)">  
+                    <input type="text" name="four" placeholder="4." oninput="fixFirstLetter(this)" required>  
                     <label> Научный руководитель </label>
                         <select name="Teacher" id="Teacher" >
                             <option value="Алексеев Михаил Николаевич">
@@ -175,7 +145,7 @@
                         <option value="9">Скрипка Надежда Михайловна</option>
                         <option value="10">Устюгова Мария Аркадьевна</option>
                 </select>
-                <button type="button" class="button-link" onclick="validateFormAndProceed()">Далее</button>
+                    <input type="submit" style="width: 106%;" value="Далее">
                 </form>
             </body>
             </html>
