--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <select id="group" name="group">
                         <option name="МТ-101" value="МТ-101">Группа МТ-101</option>
                         <option name="МТ-102" value="МТ-102">Группа МТ-102</option>
-                        <option name="МТ-103" value="МТ-103">Группа МТ-102</option>
+                        <option name="МТ-103" value="МТ-103">Группа МТ-103</option>
                         <option name="МТ-201" value="МТ-201">Группа МТ-201</option>
                         <option name="МТ-202" value="МТ-202">Группа МТ-202</option>
                         <option name="МТ-301" value="МТ-301">Группа МТ-301</option>
@@ -54,9 +54,9 @@
                         <option name="МТ-402" value="МТ-402">Группа МТ-402</option>
                         <option name="МП-101" value="МП-101">Группа МП-101</option>
                         <option name="МП-102" value="МП-102">Группа МП-102</option>
+                        <option name="МП-103" value="МП-103">Группа МТ-103</option>
                         <option name="МН-101" value="МН-101">Группа МН-101</option>
                         <option name="МН-102" value="МН-102">Группа МН-102</option>
-                        <option name="МП-103" value="МТ-103">Группа МТ-102</option>
                         <option name="МагМТ-101" value="МагМТ-101">Группа МагМТ-101</option>
                         <option name="МагМТ-201" value="МагМТ-201">Группа МагМТ-201</option>
                     </select><br><br>
