--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <option name="МТ-402" value="МТ-402">Группа МТ-402</option>
                         <option name="МП-101" value="МП-101">Группа МП-101</option>
                         <option name="МП-102" value="МП-102">Группа МП-102</option>
-                        <option name="МП-103" value="МП-103">Группа МТ-103</option>
+                        <option name="МП-103" value="МП-103">Группа МП-103</option>
                         <option name="МН-101" value="МН-101">Группа МН-101</option>
                         <option name="МН-102" value="МН-102">Группа МН-102</option>
                         <option name="МагМТ-101" value="МагМТ-101">Группа МагМТ-101</option>
